--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "decimal.js": "^10.4.3",
     "dotenv": "^16.3.1",
@@ -20,6 +21,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.10",
     "socket.io": "^4.7.2",
+    "streamifier": "^0.1.1",
     "uuid": "^9.0.0"
   }
 }
