--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "express": "^4.18.2",
     "mongoose": "^7.4.5",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10",
+    "pdfkit": "^0.17.1",
     "socket.io": "^4.7.2",
     "streamifier": "^0.1.1",
     "uuid": "^9.0.0"
