--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "decimal.js": "^10.4.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-validator": "^7.2.1",
+    "jsonwebtoken": "^9.0.2",
+    "moment-timezone": "^0.6.0",
     "mongoose": "^7.4.5",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^4.1.1",
     "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10",
     "pdfkit": "^0.17.1",
