--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10",
     "pdfkit": "^0.17.1",
+    "slugify": "^1.6.6",
     "socket.io": "^4.7.2",
     "streamifier": "^0.1.1",
     "uuid": "^9.0.0"
